# windows-contextmenu-manager

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/: guid.json
src/: blocks.rs  core.rs  lib.rs  main.rs  win10.rs  win11.rs
