[package]
name = "wcm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Windows ContextMenu Manager"
repository = "https://github.com/ahaoboy/windows-contextmenu-manager"
homepage = "https://github.com/ahaoboy/windows-contextmenu-manager"
authors = ["ahaoboy"]

[features]
cli = ["clap"]

[[bin]]
required-features = ["cli"]
name = "wcm"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
winreg = "0.55"
anyhow = "1"
futures = "0.3"
thiserror = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde-xml-rs = { version = "0.8" }
serde-appxmanifest = { version = "0.1", git = "https://github.com/ahaoboy/serde-appxmanifest" }
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Management_Deployment",
  "ApplicationModel",
  "Graphics",
  "Win32_System_SystemInformation",
] }
is-admin = { version = "0.1", git = "https://github.com/ahaoboy/is-admin" }
dirs = "6"
strum = "0.27"
strum_macros = "0.27"
exeico = { version = "0.1", git = "https://github.com/ahaoboy/exeico" }
path-clean = "1"
base64 = "0.22"
which = "8"
regex = "1"
cached = "0.55"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
